@@ -656,6 +656,7 @@ Logger.Debug ("GroupWindow.BuildGroupButtonsView adding {0} groups",
 			Logger.Debug ("Adding group button: {0}", button.PersonGroup.DisplayName);
 			button.Show ();
 			button.Clicked += OnGroupButtonClicked;
+			button.DeleteClicked += OnGroupButtonDeleteClicked;
 			groupButtonsVBox.PackStart (button, false, false, 0);
 			groupButtonMap [path.Indices [0]] = button;
 		}
@@ -930,6 +931,30 @@ Logger.Debug ("GroupWindow.BuildGroupButtonsView adding {0} groups",
 			QueueSaveState ();
 		}
 		
+		private void OnGroupButtonDeleteClicked (GroupButton sender, PersonGroup group)
+		{
+			HIGMessageDialog dialog = new HIGMessageDialog (
+				this, DialogFlags.DestroyWithParent,
+				MessageType.Warning, ButtonsType.YesNo,
+				string.Format (
+					Catalog.GetString ("Delete \"{0}\"?"),
+					group.DisplayName),
+				Catalog.GetString ("This will delete the group and not the contacts inside of the group."));
+			int responseType = dialog.Run ();
+			dialog.Destroy ();
+			
+			if (responseType == (int) ResponseType.Yes) {
+				try {
+					PersonStore.RemoveGroup (group.Id);
+				} catch (Exception e) {
+					Logger.Warn ("Error removing the group: {0}\n{1}\n{2}",
+							group.DisplayName,
+							e.Message,
+							e.StackTrace);
+				}
+			}
+		}
+		
 		// <summary>
 		// Save the state of the window if its moved or resized.
 		// </summary> 
@@ -943,11 +968,13 @@ Logger.Debug ("GroupWindow.BuildGroupButtonsView adding {0} groups",
 
 	public delegate void GroupButtonClickedHandler (GroupButton sender, PersonGroup group); 
 
-	public class GroupButton : VBox
+	public class GroupButton : HBox
 	{
 		private PersonGroup group;
 		private Label label;
 		private Button button;
+		private Button deleteButton;
+		private Image deleteImage;
 		
 		public GroupButton (PersonGroup personGroup)
 		{
@@ -966,8 +993,18 @@ Logger.Debug ("GroupWindow.BuildGroupButtonsView adding {0} groups",
 			button.Relief = ReliefStyle.None;
 			button.Show ();
 			button.Clicked += OnButtonClicked;
+			PackStart (button, true, true, 0);
 			
-			Add (button);
+			deleteImage = new Image (Stock.Delete, IconSize.Menu);
+			deleteImage.NoShowAll = true;
+			deleteButton = new Button (deleteImage);
+			deleteButton.Relief = ReliefStyle.None;
+			deleteButton.Show ();
+			deleteButton.Clicked += OnDeleteButtonClicked;
+			deleteButton.Entered += OnDeleteButtonMouseEnter;
+			deleteButton.Left += OnDeleteButtonMouseLeft;
+			
+			PackStart (deleteButton, false, false, 0);
 		}
 		
 		public new void Show ()
@@ -976,6 +1013,7 @@ Logger.Debug ("GroupWindow.BuildGroupButtonsView adding {0} groups",
 		}
 		
 		public event GroupButtonClickedHandler Clicked;
+		public event GroupButtonClickedHandler DeleteClicked;
 		
 		public PersonGroup PersonGroup
 		{
@@ -992,10 +1030,26 @@ Logger.Debug ("GroupWindow.BuildGroupButtonsView adding {0} groups",
 		
 		private void OnButtonClicked (object sender, EventArgs args)
 		{
-			if (Clicked == null)
-				return;
-			
-			Clicked (this, group);
+			if (Clicked != null)
+				Clicked (this, group);
+		}
+		
+		private void OnDeleteButtonClicked (object sender, EventArgs args)
+		{
+			if (DeleteClicked != null)
+				DeleteClicked (this, group);
+		}
+		
+		private void OnDeleteButtonMouseEnter (object sender, EventArgs args)
+		{
+			Logger.Debug ("OnDeleteButtonMouseEnter");
+			deleteImage.Show ();
+		}
+		
+		private void OnDeleteButtonMouseLeft (object sender, EventArgs args)
+		{
+			Logger.Debug ("OnDeleteButtonMouseLeft");
+			deleteImage.Hide ();
 		}
 	}
 }
